[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "user-scanner"
version = "1.4.0.1"
description = "Check username availability across multiple popular platforms"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Kaif", email = "kaifcodec@gmail.com"}
]

dependencies = [
  "httpx[http2]>=0.27,<0.29",
  "socksio>=1.0,<2",
  "colorama>=0.4,<1"
]

requires-python = ">=3.10"
keywords = ["osint", "email-osint", "username-osint", "python", "cli-tool", "cybersecurity", "threat-intelligence", "security"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-anyio", "anyio[trio]"]

[project.urls]
Homepage = "https://github.com/kaifcodec/user-scanner"

[project.scripts]
user-scanner = "user_scanner.__main__:main"

[tool.flit.module]
name = "user_scanner"

[tool.flit.sdist]
exclude = [
  "tests/",
  "docs/",
  ".github/",
  ".git",
  ".gitignore",
  ".ruff_cache/",
  "**/.ruff_cache/**",
  "__pycache__/",
  "**/__pycache__/**",
  "*.pyc",
  "rm_pycache.py",
  "che.py"
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

[tool.ruff.lint]
ignore = ["E701", "E401"]
